# natal

./: .env  .gitignore  pyproject.toml
.github/workflows/: pages.yml
backend/: config.py  main.py
backend/api/: chart.py  geocode.py  profiles.py  transits.py
backend/core/: chart.py  constants.py  ephemeris.py  geocoder.py  helpers.py  interpretations.py  life_readings.py  models.py  transits.py
backend/db/: models.py  session.py
backend/tests/: conftest.py  test_api.py  test_chart.py  test_transits.py
data/: natal.db
frontend/: 404.html  index.html
frontend/css/: app.css  reset.css
frontend/js/: api.js  config.example.js  config.js.bak  i18n.js  main.js  store.js
frontend/js/components/: chart-wheel.js  place-search.js  transit-table.js
frontend/js/core/: ai.js  calc.js  readings.js
frontend/js/lib/: astro-utils.js
frontend/js/views/: chart.js  home.js  settings.js  transits.js
natal_chart.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
